--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,8 +3,8 @@ version: 0.1
 phases:
   install:
     commands:
-      - gem install jekyll jekyll-paginate jekyll-sitemap jekyll-gist
+      - gem install jekyll jekyll-paginate jekyll-sitemap jekyll-gist bundler
   build:
     commands:
       - echo "******** Building Jekyll site ********"
-      - jekyll build
+      - bundle exec jekyll build
