--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,6 +9,5 @@ phases:
     commands:
       - echo "******** Building Jekyll site ********"
       - jekyll build
-artifacts:
-  files: "**/*"
-  base-directory: _site
+      - echo "******** Uploading to S3 *******"
+      - aws 3 sync _site/ s3:/thomaswygonik.com
