minor command fix

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,4 +10,4 @@ phases:
       - echo "******** Building Jekyll site ********"
       - jekyll build
       - echo "******** Uploading to S3 *******"
-      - aws 3 sync _site/ s3:/thomaswygonik.com
+      - aws s3 sync _site/ s3:/thomaswygonik.com
