--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: "Thomas Wygonik"
 email: thomas.wygonik@gmail.com
-description: "Thomas Wygonik's website and projects"
+description: "Thomas Wygonik's Blog"
 baseurl: ""
 url: ""
 title_description: "I’m a jack of all trades in IT. I have experience in networking, systems adminstration, and cloud computing. My current job combines all of these aspects. This site is a collection of my random projects."
