Finally gave up

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,5 +8,5 @@ phases:
     commands:
       - echo "******** Building Jekyll site ********"
       - jekyll build
-      #- echo "******** Uploading to S3 *******"
-      #- aws s3 sync _site/ s3://thomaswygonik.com
+      - echo "******** Uploading to S3 *******"
+      - aws s3 sync --delete _site/ s3://thomaswygonik.com
