--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,9 @@ github_username: twaluigi
 #facebook_link:
 
 # Footer
-footer_left: "Theme made by <a href=\"https://twitter.com/_JacobTomlinson\">Jacob Tomlinson</a>"
-footer_center: "TEST TEST TEST"
-footer_right: "Copyright &copy; Thomas Wygonik 2019"
+#footer_left: 
+footer_center: "Copyright &copy; Thomas Wygonik 2019""
+#footer_right:
 
 # Build settings
 markdown: kramdown
