minor quotation typo

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ github_username: twaluigi
 
 # Footer
 #footer_left: 
-footer_center: "Copyright &copy; Thomas Wygonik 2019""
+footer_center: "Copyright &copy; Thomas Wygonik 2019"
 #footer_right:
 
 # Build settings
