--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,11 +16,12 @@ cache:
 buildJekyll:
   stage: build
   script:
+    - cd static_site
     - bundle install --path=vendor/
     - bundle exec jekyll build
   artifacts:
     paths: 
-      - _site/
+      - static_site/_site/
 
 deployS3:
   stage: deploy
@@ -36,4 +37,4 @@ deployS3:
     - export AWS_ACCESS_KEY_ID=$(echo ${CREDS} | jq -r '.AccessKeyId')
     - export AWS_SECRET_ACCESS_KEY=$(echo ${CREDS} | jq -r '.SecretAccessKey')
     - export AWS_SESSION_TOKEN=$(echo ${CREDS} | jq -r '.SessionToken')
-    - aws s3 sync --delete _site/ s3://${BUCKET_NAME}/
+    - aws s3 sync --delete static_site/_site/ s3://${BUCKET_NAME}/
