--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,4 +29,4 @@ buildHugo:
 #    - export AWS_ACCESS_KEY_ID=$(echo ${CREDS} | jq -r '.AccessKeyId')
 #    - export AWS_SECRET_ACCESS_KEY=$(echo ${CREDS} | jq -r '.SecretAccessKey')
 #    - export AWS_SESSION_TOKEN=$(echo ${CREDS} | jq -r '.SessionToken')
-#    - aws s3 sync --delete static_site/_site/ s3://${BUCKET_NAME}/
+#    - aws s3 sync --delete hugo_site/_site/ s3://${BUCKET_NAME}/
