--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,28 +5,28 @@ variables:
 
 stages:
   - build
-#  - deploy
+  - deploy
 
 buildHugo:
   stage: build
   script:
-    - hugo -s hugo_site -D
+    - hugo -s hugo_site
   artifacts:
     paths: 
       - hugo_site/public/
 
-#deployS3:
-#  stage: deploy
-#  image: "python:3.7.4-buster"
-#  dependencies: 
-#    - buildJekyll
-#  before_script:
-#    - pip install awscli
-#    - apt-get update -y
-#    - apt-get install jq -y
-#  script:
-#    - export CREDS=$(aws sts assume-role --role-arn ${ROLE_ARN} --role-session-name "gitlab-$(date +%Y%m%d%H%M%S)" | jq -r '.Credentials')
-#    - export AWS_ACCESS_KEY_ID=$(echo ${CREDS} | jq -r '.AccessKeyId')
-#    - export AWS_SECRET_ACCESS_KEY=$(echo ${CREDS} | jq -r '.SecretAccessKey')
-#    - export AWS_SESSION_TOKEN=$(echo ${CREDS} | jq -r '.SessionToken')
-#    - aws s3 sync --delete hugo_site/_site/ s3://${BUCKET_NAME}/
+deployS3:
+  stage: deploy
+  image: "python:3.7.4-buster"
+  dependencies: 
+    - buildHugo
+  before_script:
+    - pip install awscli
+    - apt-get update -y
+    - apt-get install jq -y
+  script:
+    - export CREDS=$(aws sts assume-role --role-arn ${ROLE_ARN} --role-session-name "gitlab-$(date +%Y%m%d%H%M%S)" | jq -r '.Credentials')
+    - export AWS_ACCESS_KEY_ID=$(echo ${CREDS} | jq -r '.AccessKeyId')
+    - export AWS_SECRET_ACCESS_KEY=$(echo ${CREDS} | jq -r '.SecretAccessKey')
+    - export AWS_SESSION_TOKEN=$(echo ${CREDS} | jq -r '.SessionToken')
+    - aws s3 sync --delete hugo_site/public/ s3://${BUCKET_NAME}/
